  users impacted.
- Add a new option (`auth.allow-registration`) for determining whether registration
  is allowed on an installation.
- Moved "create organization" into React.
- Expanded React Form components (Form, ApiForm).
- Moved "create team" into React.
- add Slack to supported auth backends in social auth (for plugins)

Schema Changes
~~~~~~~~~~~~~~

- Added Release.commit_count
- Added Release.last_commit_id
- Added Release.authors
- Added Release.total_deploys
- Added Release.last_deploy_id
- Added ``FeatureAdoption`` model
- Removed DSymBundle
- Removed DSymObject
- Removed DSymSDK
- Removed DSymSymbol
- Removed GlobalDSymFile
- Added GroupHash.state
- Drop index on ``ReleaseEnvironment(project_id)``
- Drop index on ``ReleaseCommit(project_id)``
- Drop unique constraint on ``ReleaseEnvironment(project_id, release_id, environment_id)``
- Added GroupResolution.type
- Added GroupResolution.actor_id
- Added Project.platform
- Added GroupSnooze.actor_id
- Added ScheduledJob
- Added GroupResolution.actor_id
- Added ``ScheduledJob`` model
- Added User.last_active

API Changes
~~~~~~~~~~~

- Project keys endpoint will include all available keys by default. Use
  ``status=active`` to retain the old behavior.

Version 8.17
------------

- Added @mentions to comments
- Initial (internal) analytics abstraction.
- Turned on reprocessing by default
- Added basics for Data Forwarding integrations.
- Changed the grouping and default `in_app` values for cocoa events.
- Removed global dsym support.
- Removed support for legacy apple report format.
- The threads interface now contributes to grouping if it contains a single thread.
- Added per-key (DSN) rate limits (``project:rate-limits`` feature).
- Added tsdb statistics for events per-key.
- Added ``sentry.deletions`` abstraction to improve bulk deletions.
- Added basic workspace for Visual Studio Code.
- Added hovercards for Issue IDs in activity entries.
- Added event count options to ignore.